[package]
name = "tertestrial"
version = "0.0.1"
authors = ["Kevin Goslar <kevin.goslar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.19.0"
ctrlc = { version = "3.0", features = ["termination"] }
